--- a/package.json
+++ b/package.json
@@ -5,16 +5,26 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon",
-    "test": "jest"
+    "test": "jest",
+    "fix": "yarn eslint --fix src --ext js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "typescript": "^3.8.3",
     "uuidv4": "^6.0.7"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "@typescript-eslint/parser": "^2.30.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.1.3",
     "jest": "^25.2.6",
     "nodemon": "^2.0.2",
+    "prettier": "^2.0.5",
     "supertest": "^4.0.2"
   }
 }
